# recipes

./: .gitignore  PRD.md  README.md  pyproject.toml
.claude/skills/test-first/: SKILL.md  template.md
plans/: week-2026-03-09.md
src/recipes/api/: main.py
src/recipes/api/routes/: admin.py  pantry.py  planner.py  recipes.py
src/recipes/cli/: main.py
src/recipes/core/: database.py  extractor.py  models.py  planner.py  units.py
src/recipes/web/: index.html
tests/: test_extractor.py  test_pantry.py  test_planner.py
